Total refactoring and recomposition to make the project cleaner and more comprehensible